1.3.0/_sources/api/newton_utils.rst.txt
.. SPDX-FileCopyrightText: Copyright (c) 2025 The Newton Developers
.. SPDX-License-Identifier: CC-BY-4.0

newton.utils
============

.. py:module:: newton.utils
.. currentmodule:: newton.utils

.. rubric:: Classes

.. autosummary::
   :toctree: _generated
   :nosignatures:

   ColorSpace
   EventTracer
   MeshAdjacency

.. rubric:: Functions

.. autosummary::
   :toctree: _generated
   :signatures: long

   bourke_color_map
   color_graph
   color_linear_to_srgb
   color_srgb_to_linear
   compute_world_offsets
   create_cable_stiffness_from_elastic_moduli
   create_parallel_transport_cable_quaternions
   create_straight_cable_points
   create_straight_cable_points_and_quaternions
   download_asset
   event_scope
   load_texture
   normalize_texture
   plot_graph
   remesh_mesh
   run_benchmark
   solidify_mesh
   string_to_warp
   validate_tet_mesh
   validate_triangle_mesh
